--- a/templates/postgresql.conf.erb
+++ b/templates/postgresql.conf.erb
@@ -66,7 +66,7 @@ listen_addresses = '<%= @listen %>'
 					# defaults to 'localhost', '*' = all
 					# (change requires restart)
 port = <%= @port %>				# (change requires restart)
-max_connections = 100			# (change requires restart)
+max_connections = <%= @max_connections %>			# (change requires restart)
 # Note:  Increasing max_connections costs ~400 bytes of shared memory per
 # connection slot, plus lock space (see max_locks_per_transaction).
 #superuser_reserved_connections = 3	# (change requires restart)
@@ -111,7 +111,7 @@ ssl = true				# (change requires restart)
 
 # - Memory -
 
-shared_buffers = 24MB			# min 128kB
+shared_buffers = <%= @shared_buffers %> #24MB default, min 128kB
 					# (change requires restart)
 #temp_buffers = 8MB			# min 800kB
 #max_prepared_transactions = 0		# zero disables the feature
@@ -121,7 +121,7 @@ shared_buffers = 24MB			# min 128kB
 # It is not advisable to set max_prepared_transactions nonzero unless you
 # actively intend to use prepared transactions.
 #work_mem = 1MB				# min 64kB
-#maintenance_work_mem = 16MB		# min 1MB
+maintenance_work_mem = <%= @maintenanceworkmem %>		# min 1MB
 #max_stack_depth = 2MB			# min 100kB
 
 # - Kernel Resource Usage -
@@ -176,8 +176,8 @@ shared_buffers = 24MB			# min 128kB
 
 # - Checkpoints -
 
-#checkpoint_segments = 3		# in logfile segments, min 1, 16MB each
-#checkpoint_timeout = 5min		# range 30s-1h
+checkpoint_segments = <%= @checkpoint_segments %>		# in logfile segments, min 1, 16MB each
+checkpoint_timeout = <%= @checkpoint_timeout %>		# range 30s-1h
 #checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
 #checkpoint_warning = 30s		# 0 disables
 
@@ -432,7 +432,7 @@ log_line_prefix = '%t '			# special values:
 # AUTOVACUUM PARAMETERS
 #------------------------------------------------------------------------------
 
-#autovacuum = on			# Enable autovacuum subprocess?  'on'
+autovacuum = <%= @autovacuum %>			# Enable autovacuum subprocess?  'on'
 					# requires track_counts to also be on.
 #log_autovacuum_min_duration = -1	# -1 disables, 0 logs all actions and
 					# their durations, > 0 logs only
@@ -481,7 +481,7 @@ log_line_prefix = '%t '			# special values:
 
 # - Locale and Formatting -
 
-datestyle = 'iso, mdy'
+datestyle = '<%= @datestyle %>'
 #intervalstyle = 'postgres'
 #timezone = '(defaults to server environment setting)'
 #timezone_abbreviations = 'Default'     # Select the set of available time zone
@@ -536,7 +536,7 @@ default_text_search_config = 'pg_catalog.english'
 #lo_compat_privileges = off
 #quote_all_identifiers = off
 #sql_inheritance = on
-#standard_conforming_strings = on
+standard_conforming_strings = <%= @standard_conforming_strings %>
 #synchronize_seqscans = on
 
 # - Other Platforms and Clients -
